--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 on: push
 jobs:  
-    first-job: 
+    first-job:
      runs-on: ubuntu-latest
      container: node:18.16.1-alpine3.17
      steps:
       - run: node --version
       - run: npm --version
+        uses: actions/checkout@v2 
