--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,5 +7,11 @@ jobs:
      - run: node --version
      - run: npm --version
      - uses: actions/checkout@v2 
-
+     #-run: echo "daniel, how are you" 
+     - name: upload artifact
+       uses: actions/upload-artifact@v3
+       with:
+          name: my-artifact-dan-test
+          path: .
+           
     
