--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 on: push
 jobs:  
+    release-job:
+     - uses: actions/download-artifact@v3
+     - runs-on: ubuntu-latest
+    
     first-job:
      runs-on: ubuntu-latest
      container: node:18.16.1-alpine3.17
@@ -14,4 +18,4 @@ jobs:
           name: my-artifact-dan-test
           path: .
            
-    
+   
