--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,10 @@ on: push
 jobs:  
     release-job:
      steps:
-     - uses: actions/download-artifact@v3
-     - runs-on: ubuntu-latest
-    
+ 
+     uses: actions/download-artifact@v3
+       with:
+    name: my-artifact
     first-job:
      runs-on: ubuntu-latest
      container: node:18.16.1-alpine3.17
